syntax = "proto3";

package nutrition.api;
option go_package = "github.com/kirvader/BodyController/services/nutrition/proto";

import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";

import "services/nutrition/proto/models.proto";

service Nutrition {
	rpc CreateIngredient(CreateIngredientRequest) returns (CreateIngredientResponse) {
        option (google.api.http) = {
            post: "/nutrition/ingredients"
            body: "*"
        };
    };
	rpc DeleteIngredient(DeleteIngredientRequest) returns (DeleteIngredientResponse) {
        option (google.api.http) = {
            delete: "/nutrition/ingredients/{entity_id}"
        };
	};
	rpc ListIngredients(ListIngredientsRequest) returns (ListIngredientsResponse) {
        option (google.api.http) = {
            get: "/nutrition/ingredients"
        };
	};

	rpc CreateRecipe(CreateRecipeRequest) returns (CreateRecipeResponse) {
        option (google.api.http) = {
            post: "/nutrition/recipes"
            body: "*"
        };
    };
	rpc DeleteRecipe(DeleteRecipeRequest) returns (DeleteRecipeResponse) {
        option (google.api.http) = {
            delete: "/nutrition/recipes/{entity_id}"
        };
	};
	rpc ListRecipes(ListRecipesRequest) returns (ListRecipesResponse) {
        option (google.api.http) = {
            get: "/nutrition/recipes"
        };
	};

	rpc CreateMeal(CreateMealRequest) returns (CreateMealResponse) {
        option (google.api.http) = {
            post: "/nutrition/meals"
            body: "*"
        };
    };
	rpc DeleteMeal(DeleteMealRequest) returns (DeleteMealResponse) {
        option (google.api.http) = {
            delete: "/nutrition/meals/{entity_id}"
        };
	};
	rpc ListMeals(ListMealsRequest) returns (ListMealsResponse) {
        option (google.api.http) = {
            get: "/nutrition/meals"
        };
	};
}

message CreateIngredientRequest {
	nutrition.models.Ingredient entity = 1;
};

message CreateIngredientResponse {
	string entity_id = 1;
};

message DeleteIngredientRequest {
	string entity_id = 1;
};

message DeleteIngredientResponse {};

message ListIngredientsRequest {
	int32 page_size = 1;
	google.protobuf.StringValue page_token = 2;
};

message ListIngredientsResponse {
	repeated nutrition.models.Ingredient entities = 1;
	google.protobuf.StringValue next_page_token = 2;
};

message CreateRecipeRequest {
	nutrition.models.Recipe entity = 1;
};

message CreateRecipeResponse {
	string entity_id = 1;
};

message DeleteRecipeRequest {
	string entity_id = 1;
};

message DeleteRecipeResponse {};

message ListRecipesRequest {
	int32 page_size = 1;
	google.protobuf.StringValue page_token = 2;
};

message ListRecipesResponse {
	repeated nutrition.models.Recipe entities = 1;
	google.protobuf.StringValue next_page_token = 2;
};

message CreateMealRequest {
	nutrition.models.Meal entity = 1;
};

message CreateMealResponse {
	string entity_id = 1;
};

message DeleteMealRequest {
	string entity_id = 1;
};

message DeleteMealResponse {};

message ListMealsRequest {
	int32 page_size = 1;
	google.protobuf.StringValue page_token = 2;
};

message ListMealsResponse {
	repeated nutrition.models.Meal entities = 1;
	google.protobuf.StringValue next_page_token = 2;
};

